--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,4 +1,11 @@
 %h2 チーム!!
 
 = @team.current_wish && @team.current_wish.title
-= link_to 'pull', team_wishes_pull_path(current_user.teams.first)
+= link_to 'pull', team_wishes_pull_path(@team)
+
+= form_for :wish, url: team_wishes_path(@team) do |f|
+  一緒に
+  = f.hidden_field :team_id, value: @team.id
+  = f.text_field :title
+  したい！
+  = f.submit
