--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -92,6 +92,9 @@ input[type=checkbox]:focus {
     box-shadow: 0 0 12px #8d6, 0 0 4px #fff;
     outline: 0;
 }
+.btn {
+    display: inline-block;
+}
 .btn,
 button,
 input[type=submit] {
