ユーザ周りのモデルの修正

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,6 +8,6 @@
 %section
   %h2 ペア申請をする
   name
-  = form_for :team_request do |f|
+  = form_for :user_request, url: team_requests_path do |f|
     = text_field_tag :user_name
     = f.submit
