--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,8 +3,11 @@
   = devise_error_messages!
   .control-group
     .controls
+      = f.label :name
+      = f.text_field :name, :autofocus => true
+    .controls
       = f.label :email
-      = f.email_field :email, :autofocus => true
+      = f.email_field :email
     .controls
       = f.label :password
       = f.password_field :password
