--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -15,6 +15,6 @@
       = f.label :password_confirmation, "パスワード確認"
       = f.password_field :password_confirmation
     .controls
-      = f.submit "登録"
+      = f.submit "新規登録"
     .controls
       = render "devise/shared/links"
