--- a/app/views/root/index.html.haml
+++ b/app/views/root/index.html.haml
@@ -15,4 +15,4 @@
       .controls
         = link_to 'ログイン', 'users/sign_in', {:class => 'btn'}
         %br
-        = link_to 'Sign Up' , 'users/sign_up'
+        = link_to '新規登録' , 'users/sign_up'
