Improve logout button

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,6 @@
-= link_to 'ログアウト', destroy_user_session_path, method: :delete
+.control-group
+  .conntrol
+    = link_to 'ログアウト', destroy_user_session_path, {:method => :delete, :class => 'btn'}
 
 %section
   %h2 あいかたリスト
