--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,15 +1,16 @@
-.show-wish-form
-  %span
-    一緒に
-    %span.current-wish
-      = @team.current_wish && @team.current_wish.title
-    したい！
-    = button_to '別の！', team_wishes_skip_path(@team), method: :get
-    = button_to 'オワタ！', team_wishes_done_path(@team), method: :post
-
-.pull-form
-  %legend ペアでしたいことを見る
-  = button_to 'pull', team_wishes_pull_path(@team), method: :get
+-unless @team.current_wish.nil?
+  .show-wish-form
+    %span
+      一緒に
+      %span.current-wish
+        = @team.current_wish && @team.current_wish.title
+      したい！
+      = button_to '別の！', team_wishes_skip_path(@team), method: :get
+      = button_to 'オワタ！', team_wishes_done_path(@team), method: :post
+-else
+  .pull-form
+    %legend ペアでしたいことを見る
+    = button_to 'pull', team_wishes_pull_path(@team), method: :get
 
 .entry-wish
   %legend したいことを追加
