--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,3 +1,13 @@
+.description
+  %p この画面ではあなたがパートナーといっしょにしたいことを登録したり見ることができます。
+  %p
+    あなたがパートナーといっしょにしたいことを「したいことを追加」の欄に入力して登録してください。
+    パートナーにもしたいことを登録してもらってください。
+  %p
+    登録しておいた、あなたとパートナーのしたいことは「pull」すると見ることができます。
+    このとき表示される内容はあなたとパートナーで同じ内容になっています。
+  %p パートナーといっしょにしたいことをぜひ実現してください。
+
 -unless @team.current_wish.nil?
   .show-wish-form
     %span
