文言の修正

--- a/app/views/root/index.html.haml
+++ b/app/views/root/index.html.haml
@@ -1,9 +1,9 @@
 .description
   %p ペアプルはパートナーといっしょにやりたいことを登録しておくサービスです。
   %p
-    登録した内容はランダムにプル（引き出す）できます。表示される内容はパートナーと同じです。
+    登録した内容はランダムに引き出すことができます。引き出した内容はあなたとパートナーで共有しています。
     %br
-    パートナーといっしょにしたいと思っていること、パートナーが自分といっしょにしたいと思っていることを共有してみませんか？
+    パートナーといっしょにやりたいこと、パートナーがあなたといっしょにやりたいと思っていることをシェアしてみませんか？
 
 .control-form
   %legend はじめる
