--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -34,14 +34,32 @@ a:focus {
     margin-right: 5.982905982905983%;
 }
 header {
-    padding-top: 12px;
-    padding-bottom: 12px;
-}
-h1 {
-    font-size: 300%;
+    position: relative;
+    overflow: hidden;
+    padding-top: 33px;
+    margin-bottom: 34px;
     border-bottom: 1px solid #8d6;
     box-shadow: 0px 1px 0 #eee;
     font-family: "yasashisa","メイリオ","Meiryo",arial,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro",Osaka,"ＭＳ Ｐゴシック","MS PGothic",Sans-Serif;
+}
+header:after {
+    content: "";
+    visibility: hidden;
+    display: block;
+    height: 0;
+}
+header > h1 {
+    margin: 0;
+    font-size: 200%;
+}
+.login-user-name {
+    position: absolute;
+    right: 0;
+    bottom: 1px;
+    text-align: bottom;
+}
+.login-user-name > a {
+    text-decoration: none;
 }
 .description {
     background-color: rgb(211, 255, 220);
@@ -59,7 +77,7 @@ legend {
     font-size: 124%;
     border-bottom: 1px solid #8d6;
     box-shadow: 0px 1px 0 #eee;
-    margin: 20px 0 20px 0;
+    margin: 40px 0 20px 0;
     width: 80%;
 }
 form .controls {
